2011-10-07  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 5.0+beta3.

2011-10-07  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 5.0+beta2 release.

	* CHANGES: Updated.

2011-10-06  Michael Wiegand <michael.wiegand@greenbone.net>

	* ChangeLog: Fix path in last entry.

2011-10-05  Matthew Mundell <matthew.mundell@greenbone.net>

	* misc/openvas_auth.c (openvas_user_modify): New function.  Body from
	openvas-administrator openvas_admin_modify_user.

	* misc/openvas_auth.h: Add header accordingly.

2011-09-27  Matthew Mundell <matthew.mundell@greenbone.net>

	* omp/omp.c (omp_authenticate_info): New function.

	* omp/omp.h: Add header accordingly.

	* base/credentials.h (credentials_t): Add timezone and role.

	* base/credentials.c (free_credentials): Free timezone and role.

2011-09-22  Matthew Mundell <matthew.mundell@greenbone.net>

	* misc/openvas_auth.c (openvas_is_user_observer): New function.
	(openvas_set_user_role): Add observer role.

	* misc/openvas_auth.h: Add header accordingly.

2011-09-21  Matthew Mundell <matthew.mundell@greenbone.net>

	* misc/openvas_auth.c (openvas_auth_store_user_rules): Correct doc typo.

2011-09-21  Matthew Mundell <matthew.mundell@greenbone.net>

	* misc/openvas_auth.c (openvas_user_exists): New function.

	* misc/openvas_auth.h: Add header accordingly.

	* ChangeLog: Cleanup some entries.

2011-09-13  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/nasl_ssh.c (nasl_ssh_exec): Remove superfluous log messages for
	non-error cases.

2011-08-08  Matthew Mundell <matthew.mundell@greenbone.net>

	Validate LDAP auth DN.

	* misc/openvas_auth.c (openvas_auth_write_config): Validate the LDAP auth
	DN.  Adjust return accordingly.

	* misc/ldap_auth.c (auth_dn_is_good): Rename to ldap_auth_dn_is_good.
	Update callers.
	(ldap_auth_dn_is_good): New function.  Was auth_dn_is_good.  Conver to DN
	to validate.
