@@ -1,3 +1,8 @@
+2011-10-26  Michael Wiegand <michael.wiegand@greenbone.net>
+
+	* hg/hg_utils.c (hg_get_name_from_ip): Make debug messages more
+	useful.
+
 2011-10-07  Michael Wiegand <michael.wiegand@greenbone.net>
 
 	Post release version bump.
